--- a/app.json
+++ b/app.json
@@ -2,6 +2,9 @@
   "expo": {
     "name": "AI-travel-planner-app",
     "slug": "AI-travel-planner-app",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
