--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~52.0.41",
     "expo-router": "^3.5.14",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
