--- a/app.json
+++ b/app.json
@@ -3,8 +3,18 @@
     "name": "AI-travel-planner-app",
     "slug": "AI-travel-planner-app",
     "version": "1.0.0",
-    "plugins": [
-      "expo-router"
-    ]
+    "plugins": ["expo-router"],
+    "web": {
+      "devServer": {
+        "proxy": {
+          "/maps-api": {
+            "target": "https://maps.googleapis.com/maps/api",
+            "pathRewrite": {"^/maps-api": ""},
+            "changeOrigin": true,
+            "secure": false
+          }
+        }
+      }
+    }
   }
 }
