--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-google-maps/api": "^2.20.6",
     "@react-navigation/native": "^7.0.19",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.41",
-    "expo-router": "^3.5.14",
+    "expo-router": "~4.0.19",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-config": "^1.5.5",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
