Ai generating trip - part implemented

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 EXPO_PUBLIC_GOOGLE_MAP_KEY=AIzaSyA2iu1TjHHh6ONCGXLA6u7A4zNO1xQXrvU
+
+EXPO_PUBLIC_GOOGLE_GEMINI_API_KEY=AIzaSyAme6bplNkRx7yQykbnYKbcFjB1A98d6uI
