--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/metro-runtime": "~4.0.1",
+    "@google/genai": "^0.7.0",
+    "@google/generative-ai": "^0.24.0",
     "@react-google-maps/api": "^2.20.6",
     "@react-navigation/native": "^7.0.19",
     "date-fns": "^4.1.0",
@@ -21,6 +23,7 @@
     "expo-router": "~4.0.19",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.5.0",
+    "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
